gcc/testsuite/g++.dg/modules/view-namespace-2_c.C
// { dg-additional-options "-fmodules-ts" }
export module baz; // { dg-warning "not writing module" }
import bar;

void fn()
{
  globalfn(); // { dg-error "export protected" }
  GlobalFoo gf{}; // { dg-error "export protected" }
}

